--- a/public/committees-home.html
+++ b/public/committees-home.html
@@ -12,20 +12,33 @@
     .card-link{display:block;text-decoration:none;color:inherit;border-radius:16px;box-shadow:0 6px 18px rgba(0,0,0,.08);transition:.2s}
     .card-link:hover{transform:translateY(-3px);box-shadow:0 8px 24px rgba(0,0,0,.12)}
     .icon{font-size:38px}
+    .admin-only{display:none;}
+    .user-chip{font-size:.9rem}
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="d-flex justify-content-between align-items-center mb-4">
+    <!-- Header -->
+    <div class="d-flex flex-wrap justify-content-between align-items-center mb-4 gap-2">
       <h3 class="mb-0">🧭 لوحة نظام اللجان</h3>
-      <div class="d-flex gap-2">
+      <div class="d-flex align-items-center gap-2">
+        <span id="userInfo" class="user-chip badge bg-light text-dark border">
+          <i class="bi bi-person"></i>
+          <span id="userUsername">—</span>
+          <span class="mx-1">—</span>
+          <span id="userFullName">—</span>
+          <span class="ms-2 badge bg-secondary" id="userRole">—</span>
+        </span>
         <a class="btn btn-outline-secondary" href="/evaluations_dashboard.html" target="_blank">
           <i class="bi bi-bar-chart-line"></i> عرض عام (بدون تسجيل)
         </a>
-        <a class="btn btn-danger" href="/auth/committees-logout"><i class="bi bi-box-arrow-right"></i> خروج</a>
+        <button id="logoutBtn" class="btn btn-danger">
+          <i class="bi bi-box-arrow-right"></i> خروج
+        </button>
       </div>
     </div>
 
+    <!-- Grid -->
     <div class="row g-4">
       <!-- add_evaluation.html (user/admin) -->
       <div class="col-12 col-sm-6 col-lg-4">
@@ -36,8 +49,8 @@
         </a>
       </div>
 
-      <!-- manage_committees.html (admin) -->
-      <div class="col-12 col-sm-6 col-lg-4">
+      <!-- manage_committees.html (admin-only) -->
+      <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
         <a href="/manage_committees.html" class="card-link p-4 bg-white d-block h-100">
           <div class="icon text-success"><i class="bi bi-gear"></i></div>
           <h5 class="mt-3">إدارة تقييم اللجان</h5>
@@ -45,8 +58,8 @@
         </a>
       </div>
 
-      <!-- committees-names-manage.html (admin) -->
-      <div class="col-12 col-sm-6 col-lg-4">
+      <!-- committees-names-manage.html (admin-only) -->
+      <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
         <a href="/committees-names-manage.html" class="card-link p-4 bg-white d-block h-100">
           <div class="icon text-info"><i class="bi bi-list-check"></i></div>
           <h5 class="mt-3">إدارة أسماء اللجان</h5>
@@ -54,8 +67,8 @@
         </a>
       </div>
 
-      <!-- manage_colleges.html (admin) -->
-      <div class="col-12 col-sm-6 col-lg-4">
+      <!-- manage_colleges.html (admin-only) -->
+      <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
         <a href="/manage_colleges.html" class="card-link p-4 bg-white d-block h-100">
           <div class="icon text-warning"><i class="bi bi-building"></i></div>
           <h5 class="mt-3">إدارة الكليات</h5>
@@ -63,12 +76,30 @@
         </a>
       </div>
 
-      <!-- manage_auditors.html (admin) -->
-      <div class="col-12 col-sm-6 col-lg-4">
+      <!-- manage_auditors.html (admin-only) -->
+      <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
         <a href="/manage_auditors.html" class="card-link p-4 bg-white d-block h-100">
           <div class="icon text-danger"><i class="bi bi-person-badge"></i></div>
           <h5 class="mt-3">إدارة المدققين</h5>
           <p class="mb-0 text-muted">إضافة/تعديل/حذف</p>
+        </a>
+      </div>
+
+      <!-- users-manage.html (admin-only) -->
+      <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
+        <a href="/users-manage.html" class="card-link p-4 bg-white d-block h-100">
+          <div class="icon text-dark"><i class="bi bi-people-gear"></i></div>
+          <h5 class="mt-3">إدارة المستخدمين</h5>
+          <p class="mb-0 text-muted">إضافة/تعديل/تعطيل مستخدم</p>
+        </a>
+      </div>
+
+      <!-- audit-logs.html (admin-only) -->
+      <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
+        <a href="/audit-logs.html" class="card-link p-4 bg-white d-block h-100">
+          <div class="icon text-secondary"><i class="bi bi-clipboard-data"></i></div>
+          <h5 class="mt-3">سجل العمليات</h5>
+          <p class="mb-0 text-muted">من أجرى الإ addition/التعديل/الحذف</p>
         </a>
       </div>
 
@@ -82,5 +113,95 @@
       </div>
     </div>
   </div>
+
+  <!-- Toasts -->
+  <div class="toast-container position-fixed top-0 start-50 translate-middle-x p-3" style="z-index:2000">
+    <div id="toastSuccess" class="toast align-items-center text-bg-success border-0 mb-2" role="alert">
+      <div class="d-flex">
+        <div class="toast-body">✅ تم التنفيذ بنجاح</div>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+      </div>
+    </div>
+    <div id="toastError" class="toast align-items-center text-bg-danger border-0 mb-2" role="alert">
+      <div class="d-flex">
+        <div class="toast-body">❌ حدث خطأ</div>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+      </div>
+    </div>
+    <div id="toastInfo" class="toast align-items-center text-bg-primary border-0 mb-2" role="alert">
+      <div class="d-flex">
+        <div class="toast-body">ℹ️ معلومات</div>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    const toastSuccess = new bootstrap.Toast(document.getElementById('toastSuccess'));
+    const toastError   = new bootstrap.Toast(document.getElementById('toastError'));
+    const toastInfo    = new bootstrap.Toast(document.getElementById('toastInfo'));
+
+    function setToast(el, msg){ el._element.querySelector('.toast-body').innerText = msg; }
+
+    async function fetchMe() {
+      try {
+        const res = await fetch('/auth/committees/me', { credentials: 'include' });
+        if (!res.ok) throw new Error('HTTP ' + res.status);
+        const data = await res.json();
+        return data;
+      } catch (e) {
+        return { authenticated:false };
+      }
+    }
+
+    function renderUser(user){
+      const username = user?.username || (user?.email ? user.email.split('@')[0] : '—');
+      document.getElementById('userUsername').textContent = username || '—';
+      document.getElementById('userFullName').textContent = user?.name || '—';
+      document.getElementById('userRole').textContent = user?.role || '—';
+      if (user?.role === 'admin') {
+        document.querySelectorAll('.admin-only').forEach(el => { el.style.display = ''; });
+      }
+    }
+
+    async function ensureAuth(){
+      const me = await fetchMe();
+      if (!me.authenticated) {
+        const next = encodeURIComponent('/committees-home.html');
+        window.location.href = `/committees-login.html?next=${next}`;
+        return;
+      }
+      renderUser(me.user);
+    }
+
+    async function logout(){
+      try {
+        const res = await fetch('/auth/committees/logout', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          credentials: 'include'
+        });
+        if (res.ok) {
+          setToast(toastSuccess, '✅ تم تسجيل الخروج');
+          toastSuccess.show();
+          setTimeout(() => {
+            window.location.href = '/committees-login.html';
+          }, 700);
+        } else {
+          setToast(toastError, '❌ تعذر تسجيل الخروج');
+          toastError.show();
+        }
+      } catch (e) {
+        setToast(toastError, '❌ خطأ في الاتصال بالخادم');
+        toastError.show();
+      }
+    }
+
+    document.getElementById('logoutBtn').addEventListener('click', logout);
+
+    // تشغيل التحقق عند تحميل الصفحة
+    ensureAuth();
+  </script>
 </body>
 </html>
