--- a/public/committees-home.html
+++ b/public/committees-home.html
@@ -12,7 +12,7 @@
     .card-link{display:block;text-decoration:none;color:inherit;border-radius:16px;box-shadow:0 6px 18px rgba(0,0,0,.08);transition:.2s}
     .card-link:hover{transform:translateY(-3px);box-shadow:0 8px 24px rgba(0,0,0,.12)}
     .icon{font-size:38px}
-    .admin-only{display:none;}
+    .admin-only{display:none;} /* تُزال برمجياً عند admin */
     .user-chip{font-size:.9rem}
   </style>
 </head>
@@ -99,7 +99,7 @@
         <a href="/audit-logs.html" class="card-link p-4 bg-white d-block h-100">
           <div class="icon text-secondary"><i class="bi bi-clipboard-data"></i></div>
           <h5 class="mt-3">سجل العمليات</h5>
-          <p class="mb-0 text-muted">من أجرى الإ addition/التعديل/الحذف</p>
+          <p class="mb-0 text-muted">من أجرى الإضافة/التعديل/الحذف</p>
         </a>
       </div>
 
@@ -141,16 +141,14 @@
     const toastSuccess = new bootstrap.Toast(document.getElementById('toastSuccess'));
     const toastError   = new bootstrap.Toast(document.getElementById('toastError'));
     const toastInfo    = new bootstrap.Toast(document.getElementById('toastInfo'));
-
     function setToast(el, msg){ el._element.querySelector('.toast-body').innerText = msg; }
 
     async function fetchMe() {
       try {
         const res = await fetch('/auth/committees/me', { credentials: 'include' });
         if (!res.ok) throw new Error('HTTP ' + res.status);
-        const data = await res.json();
-        return data;
-      } catch (e) {
+        return await res.json();
+      } catch {
         return { authenticated:false };
       }
     }
@@ -160,8 +158,13 @@
       document.getElementById('userUsername').textContent = username || '—';
       document.getElementById('userFullName').textContent = user?.name || '—';
       document.getElementById('userRole').textContent = user?.role || '—';
-      if (user?.role === 'admin') {
-        document.querySelectorAll('.admin-only').forEach(el => { el.style.display = ''; });
+
+      // إذا كان Admin أظهر البطاقات (بإزالة الكلاس الذي يفرض display:none)
+      if ((user?.role || '').toLowerCase() === 'admin') {
+        document.querySelectorAll('.admin-only').forEach(el => {
+          el.classList.remove('admin-only');     // هذا يلغي القاعدة في الـCSS
+          // أو بديل: el.style.display = 'block';
+        });
       }
     }
 
@@ -185,22 +188,16 @@
         if (res.ok) {
           setToast(toastSuccess, '✅ تم تسجيل الخروج');
           toastSuccess.show();
-          setTimeout(() => {
-            window.location.href = '/committees-login.html';
-          }, 700);
+          setTimeout(() => { window.location.href = '/committees-login.html'; }, 700);
         } else {
-          setToast(toastError, '❌ تعذر تسجيل الخروج');
-          toastError.show();
+          setToast(toastError, '❌ تعذر تسجيل الخروج'); toastError.show();
         }
-      } catch (e) {
-        setToast(toastError, '❌ خطأ في الاتصال بالخادم');
-        toastError.show();
+      } catch {
+        setToast(toastError, '❌ خطأ في الاتصال بالخادم'); toastError.show();
       }
     }
 
     document.getElementById('logoutBtn').addEventListener('click', logout);
-
-    // تشغيل التحقق عند تحميل الصفحة
     ensureAuth();
   </script>
 </body>
